# comparus_test

./: .gitignore  README.md  main.py  pyproject.toml
outputs/: result.txt
